plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id("org.sonarqube") version "7.2.2.6593"
}

group = 'com.cartshare'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    gradlePluginPortal()
}

dependencies {
    implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.1')

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.google.cloud:spring-cloud-gcp-starter-data-firestore'
    implementation 'com.google.cloud:spring-cloud-gcp-starter'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
    implementation 'org.jspecify:jspecify:1.0.0'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.apache.poi:poi:5.4.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
    implementation("org.sonarqube:org.sonarqube.gradle.plugin:7.2.2.6593")

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:5.9.0"
    }
}

// --- Modern SonarQube Configuration ---
sonar {
    properties {
        property "sonar.projectKey", "miguel-loureiro_cartshare"
        property "sonar.organization", "miguel-loureiro"
    }
}

// --- Modern JaCoCo Configuration ---
jacoco {
    toolVersion = "0.8.12"
}

tasks.named('test') {
    useJUnitPlatform()
    exclude '**/FirestoreDataSeeder.class'

    // Modern way to finalize test with report
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }

    // MODERN REPLACEMENT FOR getConvention() / afterEvaluate
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: [
                "**/com/cartshare/backend/core/model/**",
                "**/com/cartshare/backend/config/**",
                "**/*Application*",
                "**/*Builder*"
        ])
    }))
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.80 // Raised to 85% per your requirement
            }
            excludes = [
                    "com.cartshare.backend.core.model.*",
                    "com.cartshare.backend.config.*",
                    "com.cartshare.backend.BackendApplication",
                    "com.cartshare.backend.shared.util.FirestoreDataSeeder"
            ]
        }
    }
}

check.dependsOn jacocoTestCoverageVerification